# RAG1

./: README.md  main.py  pyproject.toml  requirments.txt
data/vector_store/2854ce12-d9f3-4731-8c26-7e081ebf9598/: index_metadata.pickle
data/vector_store/733c903d-b333-448a-8e6f-d241c6ad9061/: index_metadata.pickle
notebook/: FinalRAG.ipynb  document.ipynb
