[project]
name = "rag1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-text-splitters>=1.1.0",
    "ollama>=0.6.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
]
